--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       --muted-foreground: 25 10% 50%;
       --border: 30 15% 85%;
       --card: 0 0% 100%;
-      --container-padding: 1.5rem;
+      --container-padding: 1rem;
       --max-width: 1400px;
       --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -426,7 +426,7 @@
     }
 
     .btn-primary:hover::before {
-      opacity: 1;
+      opacity: 0.3;
     }
 
     .btn-small {
@@ -495,7 +495,7 @@
 
     /* Services Section */
     .services-section {
-      padding: 8rem 1.5rem;
+      padding: 2rem 1.5rem;
       background: linear-gradient(
         to bottom,
         hsl(var(--background)),
@@ -620,62 +620,206 @@
     .instagram-handle {
       font-size: 1.125rem;
       color: hsl(var(--muted-foreground));
-      margin-bottom: 2rem;
-    }
-
-    /* Footer */
-    .footer {
-      position: relative;
-      z-index: 1;
-      background-color: hsla(var(--muted), 0.3);
-      padding: 4rem 1.5rem 2rem;
-      border-top: 1px solid hsl(var(--border));
-    }
-
-    .footer-content {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 3rem;
-      margin-bottom: 3rem;
-    }
-
-    .footer-brand h3 {
-      font-size: 1.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    .footer-brand p {
-      color: hsl(var(--muted-foreground));
-    }
-
-    .footer-links {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 2rem;
-    }
-
-    .footer-links h4 {
-      font-size: 1rem;
-      font-weight: 600;
       margin-bottom: 1rem;
     }
 
-    .footer-links ul {
-      list-style: none;
+    /*CTA*/
+
+    .soma-cta-section {
+      position: relative;
+      padding: 4rem 1.5rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      overflow: hidden;
     }
 
-    .footer-links li {
-      margin-bottom: 0.5rem;
+    .soma-cta-section::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      z-index: 0;
     }
 
-    .footer-links a {
-      color: hsl(var(--muted-foreground));
+    .soma-cta-card {
+      position: relative;
+      z-index: 1;
+      background: transparent; /* fully transparent background */
+      border: 2px solid hsl(var(--border)); /* only outline */
+      border-radius: 1.5rem;
+      padding: 3rem 2.5rem; /* slightly bigger horizontally */
+      width: 1200px; /* wider card */
+      margin: 0 auto;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      opacity: 0;
+      transform: translateY(20px);
+    }
+
+    /* Add class when visible */
+    .soma-cta-card.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .soma-cta-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 15px 50px rgba(0, 0, 0, 0.05); /* subtle shadow on hover */
+    }
+
+    .soma-cta-title {
+      font-size: clamp(1.75rem, 4vw, 2.5rem);
+      font-weight: 500;
+      color: hsl(var(--foreground));
+      margin-bottom: 0.75rem;
+      letter-spacing: -0.02em;
+    }
+
+    .soma-cta-subtitle {
+      font-size: clamp(0.95rem, 2vw, 1.2rem);
+      color: hsl(var(--foreground) / 0.7);
+      margin-bottom: 2rem;
+    }
+
+    .soma-cta-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0.75rem;
+    }
+
+    .soma-btn {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.85rem 1.75rem;
+      border-radius: 9999px;
+      font-weight: 500;
+      font-size: 0.95rem;
       text-decoration: none;
-      transition: var(--transition);
+      transition: all 0.3s ease;
+      border: 2px solid transparent;
+      position: relative;
+      overflow: hidden;
     }
 
-    .footer-links a:hover {
+    .soma-btn-primary {
+      background: linear-gradient(
+        to right,
+        hsl(var(--primary)),
+        hsl(var(--accent))
+      );
+      color: hsl(var(--primary-foreground));
+      box-shadow: 0 8px 18px hsla(var(--primary), 0.25);
+    }
+
+    .soma-btn-primary:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 12px 28px hsla(var(--primary), 0.3);
+    }
+
+    .soma-btn-outline {
+      background: transparent;
+      border-color: hsl(var(--border));
+      color: hsl(var(--foreground) / 0.8);
+    }
+
+    .soma-btn-outline:hover {
+      border-color: hsl(var(--primary));
       color: hsl(var(--primary));
+      background-color: hsla(var(--primary), 0.05);
+      transform: translateY(-2px);
+    }
+
+    .soma-btn svg {
+      transition: transform 0.3s ease;
+    }
+
+    .soma-btn:hover svg {
+      transform: translateX(4px);
+    }
+
+    /* Fade-in animations */
+    @keyframes fade-in-up {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Footer*/
+    .footer-minimal {
+      background-color: transparent;
+      border-top: 1px solid hsl(var(--border));
+      padding: 3rem 1.5rem;
+    }
+
+    .footer-minimal-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    /* Left: Connect Info */
+    .footer-connect {
+      flex: 1 1 300px;
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+      justify-content: center;
+      align-items: flex-start;
+    }
+
+    .footer-connect h3 {
+      font-size: 1.5rem;
+      margin-bottom: 0.5rem;
+      color: hsl(var(--foreground));
+    }
+
+    .footer-connect p {
+      font-size: 0.95rem;
+      color: hsl(var(--foreground) / 0.7);
+      margin: 0;
+    }
+
+    .connect-links {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      margin-top: 0.5rem;
+      font-size: 0.95rem;
+      color: hsl(var(--foreground) / 0.7);
+    }
+
+    .connect-links a {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      color: hsl(var(--foreground) / 0.7);
+      transition: color 0.3s ease;
+    }
+
+    .connect-links a:hover {
+      color: hsl(var(--primary));
+    }
+
+    /* Map */
+    .footer-map {
+      flex: 1 1 400px;
+    }
+
+    .footer-map iframe {
+      border-radius: 1rem;
+      width: 100%;
+      height: 250px;
     }
 
     /* Animations */
@@ -702,37 +846,6 @@
     .fade-in-up {
       animation: fade-in-up 0.8s ease-out;
     }
-
-    /* Responsive */
-    @media (max-width: 768px) {
-      .mobile-menu-btn {
-        display: flex;
-      }
-
-      .nav-menu {
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        flex-direction: column;
-        background-color: hsl(var(--background));
-        border-top: 1px solid hsl(var(--border));
-        padding: 1rem;
-        display: none;
-      }
-
-      .nav-menu.active {
-        display: flex;
-      }
-
-      .feature-pills {
-        grid-template-columns: 1fr;
-      }
-
-      .logo-img {
-        height: 32px;
-      }
-    }
   </style>
   <body>
     <header class="header">
@@ -747,7 +860,7 @@
         </button>
         <ul class="nav-menu" id="navMenu">
           <li><a href="index.html" class="nav-link active">Home</a></li>
-          <li><a href="about.html" class="nav-link">About</a></li>
+          <li><a href="aboutus.html" class="nav-link">About</a></li>
           <li><a href="services.html" class="nav-link">Services</a></li>
           <li><a href="gallery.html" class="nav-link">Gallery</a></li>
           <li><a href="shop.html" class="nav-link">Shop</a></li>
@@ -1237,20 +1350,7 @@
           </svg>
           <h2 class="section-title">Follow Our Journey</h2>
         </div>
-        <a
-          href="https://www.instagram.com/wellness.soma/"
-          target="_blank"
-          class="instagram-handle"
-          style="
-            text-decoration: none;
-            color: inherit;
-            display: inline-block;
-            transition: var(--transition);
-          "
-        >
-          @wellness.soma
-        </a>
-        <!-- SnapWidget Instagram Feed -->
+        <!-- Instagram Feed -->
         <div
           style="
             margin: 2rem auto;
@@ -1297,39 +1397,150 @@
         </a>
       </div>
     </section>
-    <!-- Footer -->
-    <footer class="footer">
+
+    <section class="soma-cta-section">
       <div class="container">
-        <div class="footer-content">
-          <div class="footer-brand">
-            <h3>Soma Wellness Studio</h3>
-            <strong><p>Transform your mind, body & spirit</p></strong>
-            <p>Pepsicola, New Townplanning</p>
+        <div class="soma-cta-card">
+          <h2 class="soma-cta-title">Ready to begin your Soma experience?</h2>
+          <p class="soma-cta-subtitle">
+            Transform your wellness journey with us today
+          </p>
+
+          <div class="soma-cta-buttons">
+            <a href="#book" class="soma-btn soma-btn-primary">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <rect x="3" y="4" width="18" height="18" rx="2" ry="2" />
+                <line x1="16" y1="2" x2="16" y2="6" />
+                <line x1="8" y1="2" x2="8" y2="6" />
+                <line x1="3" y1="10" x2="21" y2="10" />
+              </svg>
+              <span>Book Now</span>
+            </a>
+            <a href="tel:+9779801234567" class="soma-btn soma-btn-outline">
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"
+                />
+              </svg>
+              <span>Call Us</span>
+            </a>
+            <a
+              href="https://wa.me/9779801234567"
+              target="_blank"
+              class="soma-btn soma-btn-outline"
+            >
+              <svg
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+              >
+                <path
+                  d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"
+                />
+              </svg>
+              <span>WhatsApp Us</span>
+            </a>
           </div>
-          <div class="footer-links">
-            <div>
-              <h4>Navigate</h4>
-              <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contact</a></li>
-              </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Minimalist Footer with Connect -->
+    <footer class="footer-minimal">
+      <div class="container">
+        <div class="footer-minimal-content">
+          <!-- Left: Connect -->
+          <div class="footer-connect">
+            <h3>Soma Wellness Studio</h3>
+            <p>Pepsicola, New Townplanning</p>
+            <p>Opening hours: 11am - 6pm</p>
+            <div class="connect-links">
+              <span>Connect:</span>
+              <a
+                href="https://www.instagram.com/wellness.soma/"
+                target="_blank"
+                aria-label="Instagram"
+              >
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                  <path
+                    d="M16 11.37a4 4 0 1 1-4.9-4.9 4 4 0 0 1 4.9 4.9z"
+                  ></path>
+                  <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
+                </svg>
+              </a>
+              <a href="#" target="_blank" aria-label="Facebook">
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path
+                    d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+                  ></path>
+                </svg>
+              </a>
+              <a href="mailto:info@somawellness.com" aria-label="Email">
+                <svg
+                  width="20"
+                  height="20"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                >
+                  <path d="M4 4h16v16H4z"></path>
+                  <polyline points="22,6 12,13 2,6"></polyline>
+                </svg>
+              </a>
             </div>
-            <div>
-              <h4>Connect</h4>
-              <ul>
-                <li>
-                  <a
-                    href="https://www.instagram.com/wellness.soma/"
-                    target="_blank"
-                    >Instagram</a
-                  >
-                </li>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="mailto:info@somawellness.com">Email Us</a></li>
-              </ul>
-            </div>
+          </div>
+
+          <!-- Right: Map -->
+          <div class="footer-map">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1808838.4620612687!2d82.93259815625!3d27.689867999999993!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb1b603f95a8b9%3A0x7e278db8a4c5d6ca!2sSoma%20Wellness%20Studio!5e0!3m2!1sen!2snp!4v1760603546071!5m2!1sen!2snp"
+              width="800"
+              height="600"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+              width="100%"
+              height="250"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
           </div>
         </div>
       </div>
@@ -1452,6 +1663,11 @@
         } else {
           header.style.boxShadow = "none";
         }
+      });
+
+      document.addEventListener("DOMContentLoaded", () => {
+        const cta = document.querySelector(".soma-cta-card");
+        setTimeout(() => cta.classList.add("visible"), 300);
       });
 
       // Intersection Observer
