--- a/index.html
+++ b/index.html
@@ -493,108 +493,95 @@
       text-align: center;
     }
 
-    /* Services Section */
-    .services-section {
-      padding: 2rem 1.5rem;
-      background: linear-gradient(
-        to bottom,
-        hsl(var(--background)),
-        hsla(var(--muted), 0.2)
-      );
-    }
-
-    .section-header {
-      text-align: center;
-      margin-bottom: 4rem;
-    }
-
-    .section-title {
-      font-size: clamp(2.5rem, 5vw, 4rem);
-      margin-bottom: 1.5rem;
-      letter-spacing: -0.02em;
-    }
-
-    .section-subtitle {
-      font-size: 1.125rem;
-      color: hsl(var(--muted-foreground));
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    /* Services Grid */
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 1.5rem;
-    }
-
-    /* Service Card */
-    .service-card {
+    /* Circular Layout (matches your theme) */
+    .services-carousel {
+      position: relative;
+      width: 100%;
+      height: 650px;
+      perspective: 1000px;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .services-carousel .service-card {
+      position: absolute;
+      width: 260px;
+      height: 320px;
+      background-color: #fff;
       border-radius: 1rem;
       overflow: hidden;
-      text-decoration: none;
-      background-color: #fff; /* fallback for text area */
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-      z-index: 1;
+      transition: transform 0.6s ease, opacity 0.6s ease;
+      cursor: pointer;
     }
 
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    .services-carousel .service-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
     }
 
-    /* Image Wrapper */
-    .service-image-wrapper {
+    .services-carousel .service-image-wrapper {
       width: 100%;
-      aspect-ratio: 1;
+      height: 60%;
       overflow: hidden;
-      z-index: 2;
     }
 
-    .service-image {
+    .services-carousel .service-image {
       width: 100%;
       height: 100%;
       object-fit: cover;
       display: block;
-      z-index: 2;
+      transition: transform 0.5s ease;
     }
 
-    /* Text Content Section */
-    .service-content {
-      background-color: white; /* solid color behind text */
-      padding: 1.5rem;
+    .services-carousel .service-card:hover .service-image {
+      transform: scale(1.08);
+    }
+
+    .services-carousel .service-content {
+      background-color: #fff;
+      padding: 1rem 1.25rem;
       display: flex;
       flex-direction: column;
-      gap: 0.5rem;
-      z-index: 3;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 0.25rem;
     }
 
-    .service-content h3 {
-      font-size: 1.5rem;
-      margin: 0;
+    .services-carousel .service-content h3 {
+      font-size: 1.25rem;
       color: #7a9c8d;
+      margin-bottom: 0.25rem;
     }
 
-    .service-link {
+    .services-carousel .service-link {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.4rem;
       font-size: 0.875rem;
       font-weight: 600;
       color: #8b84b1;
       transition: color 0.3s ease;
     }
 
-    .service-link:hover {
+    .services-carousel .service-link:hover {
       color: hsl(var(--accent));
     }
 
-    /* Optional: adjust icon if needed */
-    .service-icon {
-      display: none;
+    /* Tooltip */
+    .service-info {
+      position: absolute;
+      background: white;
+      border: 2px solid hsl(var(--accent));
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.2s ease;
+      font-size: 0.9rem;
+      color: hsl(var(--foreground));
     }
 
     /* Instagram */
@@ -1103,7 +1090,6 @@
     <!-- Services Section -->
     <section class="services-section">
       <div class="container">
-        <!-- Section Header -->
         <div class="section-header">
           <h2 class="section-title">Our Services</h2>
           <p class="section-subtitle">
@@ -1112,10 +1098,9 @@
           </p>
         </div>
 
-        <!-- Services Grid -->
-        <div class="services-grid">
-          <!-- Massage Therapies -->
-          <a href="#massage" class="service-card">
+        <!-- Circular Carousel -->
+        <div class="services-carousel" id="servicesCarousel">
+          <div class="service-card" data-info="Massage Therapies">
             <div class="service-image-wrapper">
               <img
                 src="images/massage.jpeg"
@@ -1123,7 +1108,7 @@
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Massage Therapies</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1139,10 +1124,9 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Holistic Healing -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Holistic Healing">
             <div class="service-image-wrapper">
               <img
                 src="images/healing.JPG"
@@ -1150,7 +1134,7 @@
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Holistic Healing</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1166,18 +1150,17 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Yoga & Meditation -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Yoga & Meditation">
             <div class="service-image-wrapper">
               <img
                 src="images/yoga.png"
-                alt="Holistic Healing"
+                alt="Yoga & Meditation"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Yoga & Meditation</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1193,18 +1176,17 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Pregnancy Care -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Pregnancy Care">
             <div class="service-image-wrapper">
               <img
                 src="images/pregnancy.JPG"
-                alt="Holistic Healing"
+                alt="Pregnancy Care"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Pregnancy Care</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1220,17 +1202,17 @@
                 </svg>
               </div>
             </div>
-          </a>
-          <!-- Tea & Tisanes -->
-          <a href="#massage" class="service-card">
+          </div>
+
+          <div class="service-card" data-info="Tea & Tisanes">
             <div class="service-image-wrapper">
               <img
                 src="images/tea.png"
-                alt="Holistic Healing"
+                alt="Tea & Tisanes"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Tea & Tisanes</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1246,18 +1228,17 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Art & Creativity -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Art & Creativity">
             <div class="service-image-wrapper">
               <img
                 src="images/art.jpeg"
-                alt="Holistic Healing"
+                alt="Art & Creativity"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Art & Creativity</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1273,18 +1254,17 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Beauty Treatments -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Beauty Treatments">
             <div class="service-image-wrapper">
               <img
                 src="images/facial.png"
-                alt="Holistic Healing"
+                alt="Beauty Treatments"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Beauty Treatments</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1300,18 +1280,17 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
 
-          <!-- Nepali Products -->
-          <a href="#massage" class="service-card">
+          <div class="service-card" data-info="Nepali Products">
             <div class="service-image-wrapper">
               <img
                 src="images/nepprod.png"
-                alt="Holistic Healing"
+                alt="Nepali Products"
                 class="service-image"
               />
             </div>
-            <div class="service-content solid-background">
+            <div class="service-content">
               <h3>Nepali Products</h3>
               <div class="service-link">
                 <span>View More</span>
@@ -1327,7 +1306,7 @@
                 </svg>
               </div>
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </section>
@@ -1693,6 +1672,61 @@
           observer.observe(el);
         });
       });
+
+      const serviceCards = document.querySelectorAll(".service-card");
+      const totalServices = serviceCards.length;
+      const radius = 360;
+      let angle = 0;
+      let rotating = true;
+
+      function positionServices() {
+        serviceCards.forEach((card, i) => {
+          const theta = ((2 * Math.PI) / totalServices) * i + angle;
+          const x = Math.cos(theta) * radius;
+          const y = Math.sin(theta) * radius * 0.45;
+          const scale = 1 + Math.sin(theta) * 0.25;
+          const opacity = 0.6 + Math.sin(theta) * 0.4;
+          const zIndex = Math.round(Math.sin(theta) * 100);
+
+          card.style.transform = `translate(${x}px, ${y}px) scale(${scale})`;
+          card.style.opacity = opacity;
+          card.style.zIndex = zIndex;
+        });
+      }
+
+      function animateServices() {
+        if (rotating) {
+          angle += 0.002; // rotation speed
+          positionServices();
+        }
+        requestAnimationFrame(animateServices);
+      }
+
+      const carousel = document.getElementById("servicesCarousel");
+      carousel.addEventListener("mouseenter", () => (rotating = false));
+      carousel.addEventListener("mouseleave", () => (rotating = true));
+
+      // Tooltip behavior
+      const serviceInfo = document.createElement("div");
+      serviceInfo.classList.add("service-info");
+      document.body.appendChild(serviceInfo);
+
+      serviceCards.forEach((card) => {
+        card.addEventListener("mouseenter", (e) => {
+          serviceInfo.textContent = card.getAttribute("data-info");
+          serviceInfo.style.opacity = 1;
+        });
+        card.addEventListener("mousemove", (e) => {
+          serviceInfo.style.top = e.pageY + 15 + "px";
+          serviceInfo.style.left = e.pageX + 15 + "px";
+        });
+        card.addEventListener("mouseleave", () => {
+          serviceInfo.style.opacity = 0;
+        });
+      });
+
+      positionServices();
+      animateServices();
     </script>
   </body>
 </html>
