--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
     .section-header {
       text-align: center;
-      margin-bottom: 4rem;
+      margin-bottom: 2rem;
     }
 
     .section-title {
@@ -524,11 +524,12 @@
     .services-carousel {
       position: relative;
       width: 100%;
-      height: 700px;
+      height: 620px;
       display: flex;
       justify-content: center;
       align-items: center;
       perspective: 1000px;
+      margin-top: 0.5rem;
     }
 
     /* Each service item */
