Membership Page Updated

--- a/aboutus.html
+++ b/aboutus.html
@@ -762,6 +762,18 @@
           </div>
         </div>
       </div>
+      <div
+        class="footer-credit"
+        style="
+          text-align: center;
+          margin-top: 2rem;
+          font-size: 0.85rem;
+          padding-bottom: 0;
+          color: hsl(var(--muted-foreground));
+        "
+      >
+        Developed by Karmistha
+      </div>
     </footer>
   </body>
 </html>
