--- a/index.html
+++ b/index.html
@@ -572,6 +572,19 @@
       box-shadow: none;
     }
 
+    .view-more-link {
+      margin-top: 0.3rem;
+      font-size: 0.85rem;
+      text-decoration: none;
+      color: hsl(var(--primary));
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    .view-more-link:hover {
+      color: hsl(var(--accent));
+    }
+
     /* Instagram */
     .instagram-section {
       position: relative;
@@ -1097,6 +1110,7 @@
               />
             </div>
             <h3>Massage Therapies</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1108,6 +1122,7 @@
               />
             </div>
             <h3>Holistic Healing</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1119,6 +1134,7 @@
               />
             </div>
             <h3>Yoga & Meditation</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1130,6 +1146,7 @@
               />
             </div>
             <h3>Pregnancy Care</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1141,6 +1158,7 @@
               />
             </div>
             <h3>Tea & Tisanes</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1152,6 +1170,7 @@
               />
             </div>
             <h3>Art & Creativity</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1163,6 +1182,7 @@
               />
             </div>
             <h3>Beauty Treatments</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
 
           <div class="service-card">
@@ -1174,6 +1194,7 @@
               />
             </div>
             <h3>Nepali Products</h3>
+            <a href="massage.html" class="view-more-link">View More</a>
           </div>
         </div>
       </div>
@@ -1390,6 +1411,18 @@
             </iframe>
           </div>
         </div>
+      </div>
+      <div
+        class="footer-credit"
+        style="
+          text-align: center;
+          margin-top: 2rem;
+          font-size: 0.85rem;
+          padding-bottom: 0;
+          color: hsl(var(--muted-foreground));
+        "
+      >
+        Developed by Karmistha
       </div>
     </footer>
 
